<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aroya.lab7_storage.MainActivity">

<TextView
    android:id="@+id/file_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/file_title"
    android:textSize="36dp"
    android:textColor="#A1A"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/file_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/file_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"/>

    <!--自下而上-->
    <Button
        android:id="@+id/file_delete"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/file_delete"
        android:textColor="#F00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/file_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_save"
        app:layout_constraintBottom_toTopOf="@id/file_delete"
        app:layout_constraintLeft_toLeftOf="@id/file_delete"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/file_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_clear"
        app:layout_constraintBottom_toTopOf="@id/file_delete"
        app:layout_constraintRight_toRightOf="@id/file_delete"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/file_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_load"
        app:layout_constraintBottom_toTopOf="@id/file_delete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/file_save"
        app:layout_constraintRight_toLeftOf="@id/file_clear"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/file_content"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:hint="@string/file_content_hint"
        android:gravity="top|left"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/file_save"
        app:layout_constraintLeft_toLeftOf="@id/file_save"
        app:layout_constraintTop_toBottomOf="@id/file_name" />



</android.support.constraint.ConstraintLayout>
