<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aroya.lab7_storage.MainActivity">


    <EditText
        android:id="@+id/new_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="17"
        android:textSize="18dp"
        android:hint="@string/new_pw_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/new_conf_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="17"
        android:textSize="18dp"
        android:hint="@string/conf_pw_hint"
        app:layout_constraintTop_toBottomOf="@id/new_pw"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/new_pw_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        app:layout_constraintTop_toBottomOf="@id/new_conf_pw"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/new_conf_pw"/>
    <Button
        android:id="@+id/new_pw_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        app:layout_constraintTop_toTopOf="@id/new_pw_ok"
        app:layout_constraintBottom_toBottomOf="@id/new_pw_ok"
        app:layout_constraintLeft_toRightOf="@id/new_pw_ok"
        android:layout_marginLeft="5dp"/>

</android.support.constraint.ConstraintLayout>
